--- a/src/style.css
+++ b/src/style.css
@@ -1,62 +1,55 @@
-*{
+* {
   font-family: 'Roboto', sans-serif;
 }
 
-.ul {
-  list-style-type: none;
-  display: flex;
+html {
+  background: url("https://images.unsplash.com/photo-1523800503107-5bc3ba2a6f81?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=80") no-repeat center center fixed;
+  background-size: cover;
+  background-position: 50% 70%;
 }
 
-.nav {
-  color: whitesmoke;
-}
-a{
-  border:3px solid whitesmoke ;
-  border-radius: 15px;
-  padding: 5px;
-  font-size: 16px;
+a {
   text-decoration: none;
 }
+
 a:link {
   color: whitesmoke;
 }
+
 a:visited {
   color: whitesmoke;
 }
+
 a:hover {
   color: black;
   background-color: whitesmoke;
 }
+
 a:active {
   color: blue;
 }
 
-body {
-  background-image: url("https://images.unsplash.com/photo-1523800503107-5bc3ba2a6f81?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=80");
-  background-position: center;
-  width: 100%;
-  height: 100%;
-  background-size: cover;
-  background-repeat: no-repeat;
+#nav-list {
+  list-style-type: none;
 }
 
-#navbar li {
-  font-size: 15px;
-  padding: 10px;
-  list-style: none;
-  margin-left: 10px;
-  float:left;
+.navPoint {
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  border: 3px solid whitesmoke;
+  padding: 5px;
+  font-size: 16px;
+  margin: 1px 1px 1px 1px;
 }
 
-#projects {
-  color: white;
-}
-
-#welcome-container{
-  display: flex;
-  justify-content: center;
-}
 #welcome-section {
   color: whitesmoke;
-  
+  text-align: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
 }
+/*# sourceMappingURL=style.css.map */
