--- a/src/style.css
+++ b/src/style.css
@@ -1,11 +1,42 @@
 * {
   font-family: 'Roboto', sans-serif;
+  margin: 0;
+  padding: 0;
 }
 
-html {
-  background: url("https://images.unsplash.com/photo-1523800503107-5bc3ba2a6f81?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=80") no-repeat center center fixed;
+html, body {
+  height: 100%;
+  width: 100%;
+  margin: 0;
+}
+
+#page1 {
+  background: url("https://images.unsplash.com/photo-1523800503107-5bc3ba2a6f81?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=80");
   background-size: cover;
   background-position: 50% 70%;
+  width: 100%;
+  height: 100%;
+  padding-top: 5px;
+}
+
+#welcome-section {
+  color: whitesmoke;
+  text-align: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  font-size: 36px;
+  font-family: "Raleway", sans-serif;
+}
+
+#sub-heading {
+  color: #feb400;
+  font-family: "Poppins", sans-serif;
+  font-size: 26px;
+  font-weight: 200;
+  font-style: italic;
 }
 
 a {
@@ -21,35 +52,47 @@ a:visited {
 }
 
 a:hover {
-  color: black;
-  background-color: whitesmoke;
-}
-
-a:active {
-  color: blue;
+  color: #000000;
+  background-color: #feb400;
 }
 
 #nav-list {
   list-style-type: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 60px;
+  background: #000000;
 }
 
 .navPoint {
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  border: 3px solid whitesmoke;
-  padding: 5px;
-  font-size: 16px;
-  margin: 1px 1px 1px 1px;
+  padding: 15px;
+  font-size: 24px;
 }
 
-#welcome-section {
-  color: whitesmoke;
-  text-align: center;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
+#page2 {
+  background-color: #D3D3D3;
+  background-size: cover;
+  width: 100%;
+  height: 100%;
+  padding-top: 5px;
+}
+
+#page3 {
+  background-color: #5a4a60;
+  background-size: cover;
+  width: 100%;
+  height: 100%;
+  padding-top: 5px;
 }
 /*# sourceMappingURL=style.css.map */
