--- a/src/style.scss
+++ b/src/style.scss
@@ -1,37 +1,35 @@
+$color-white:whitesmoke;
+$color-purple: #5a4a60;
+$color-blue: #4a7aba;
+$color-light-gray:#D3D3D3;
+$color-dark-gray:#627396;
+$color-yellow:#feb400;
+$color-black:#000000;
+$font-family-roboto: 'Roboto', sans-serif;
+$font-family-Poppins: 'Poppins', sans-serif;
+$font-family-raleway: 'Raleway', sans-serif;
+
 *{
   font-family: 'Roboto', sans-serif;
+  margin: 0;
+  padding: 0;
 }
-html { 
-  background: url("https://images.unsplash.com/photo-1523800503107-5bc3ba2a6f81?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=80") no-repeat center center fixed; 
+html, body { 
+  height: 100%;
+  width: 100%;
+  margin: 0;
+}
+
+#page1 {
+background: url("https://images.unsplash.com/photo-1523800503107-5bc3ba2a6f81?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=80"); 
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
   background-position: 50% 70%;
-}
-
-a{text-decoration: none; 
-  &:link {
-  color: whitesmoke;
-}&:visited {
-  color: whitesmoke;
-}&:hover {
-  color: black;
-  background-color: whitesmoke;
-}&:active {
-  color: blue;
-}}
-#nav-list {
-  list-style-type: none;  
-}
-
-.navPoint {
-justify-content: space-between;
-border:3px solid whitesmoke ;
-padding: 5px;
-font-size: 16px;
-margin:1px 1px 1px 1px;
-
+  width: 100%;
+  height: 100%;
+  padding-top: 5px;
 }
 
 #welcome-section {
@@ -40,5 +38,60 @@ margin:1px 1px 1px 1px;
   position: absolute;
     top: 50%;
     left: 50%;  
-    transform: translate(-50%, -50%)
+    transform: translate(-50%, -50%);
+    font-size: 36px;
+  font-family: $font-family-raleway;
 }
+#sub-heading {
+  color: $color-yellow;
+  font-family: $font-family-Poppins;
+  font-size: 26px;
+  font-weight: 200;
+  font-style: italic;;
+}
+
+a{text-decoration: none; 
+  &:link {
+  color: whitesmoke;
+}&:visited {
+  color: whitesmoke;
+}&:hover {
+  color: $color-black;
+  background-color: $color-yellow;
+}
+}
+
+#nav-list {
+list-style-type: none;
+display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 60px;
+  background: $color-black;
+}
+
+.navPoint {
+padding: 15px;
+font-size: 24px;
+}
+
+#page2 {
+background-color:$color-light-gray;
+  background-size: cover;
+  width: 100%;
+  height: 100%;
+  padding-top: 5px;
+}
+
+#page3 {
+background-color: $color-purple;
+  background-size: cover;
+  width: 100%;
+  height: 100%;
+  padding-top: 5px;
+}
+
