--- a/src/style.css
+++ b/src/style.css
@@ -39,23 +39,6 @@ html, body {
   font-style: italic;
 }
 
-a {
-  text-decoration: none;
-}
-
-a:link {
-  color: whitesmoke;
-}
-
-a:visited {
-  color: whitesmoke;
-}
-
-a:hover {
-  color: #000000;
-  background-color: #feb400;
-}
-
 #nav-list {
   list-style-type: none;
   display: -webkit-box;
@@ -78,6 +61,20 @@ a:hover {
 .navPoint {
   padding: 15px;
   font-size: 24px;
+  text-decoration: none;
+}
+
+.navPoint:link {
+  color: whitesmoke;
+}
+
+.navPoint:visited {
+  color: whitesmoke;
+}
+
+.navPoint:hover {
+  color: #000000;
+  background-color: #feb400;
 }
 
 #page2 {
@@ -85,14 +82,64 @@ a:hover {
   background-size: cover;
   width: 100%;
   height: 100%;
-  padding-top: 5px;
+  padding-top: 70px;
+}
+
+#page2title {
+  color: #627396;
+  font-family: "Poppins", sans-serif;
 }
 
 #page3 {
-  background-color: #5a4a60;
+  background-color: #feb400;
   background-size: cover;
   width: 100%;
   height: 100%;
-  padding-top: 5px;
+  padding-top: 70px;
+}
+
+#page3title {
+  color: #4a7aba;
+  font-family: "Poppins", sans-serif;
+  text-align: center;
+  margin-bottom: 30px;
+}
+
+#contactContainer {
+  height: 600px;
+  width: 600px;
+  background-color: #D3D3D3;
+  text-align: center;
+  margin: auto;
+  border-radius: 20px;
+}
+
+#headshot {
+  width: 200px;
+  height: 200px;
+  border-radius: 50%;
+  margin-top: 15px;
+}
+
+.page3text {
+  margin: 5px;
+}
+
+#logoContainer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+}
+
+#logos {
+  margin-top: 5px;
+  height: 50px;
+  width: 50px;
 }
 /*# sourceMappingURL=style.css.map */
