--- a/src/style.scss
+++ b/src/style.scss
@@ -50,17 +50,6 @@ background: url("https://images.unsplash.com/photo-1523800503107-5bc3ba2a6f81?ix
   font-style: italic;;
 }
 
-a{text-decoration: none; 
-  &:link {
-  color: whitesmoke;
-}&:visited {
-  color: whitesmoke;
-}&:hover {
-  color: $color-black;
-  background-color: $color-yellow;
-}
-}
-
 #nav-list {
 list-style-type: none;
 display: flex;
@@ -77,6 +66,15 @@ display: flex;
 .navPoint {
 padding: 15px;
 font-size: 24px;
+text-decoration: none; 
+  &:link {
+  color: whitesmoke;
+}&:visited {
+  color: whitesmoke;
+}&:hover {
+  color: $color-black;
+  background-color: $color-yellow;
+}
 }
 
 #page2 {
@@ -84,14 +82,55 @@ background-color:$color-light-gray;
   background-size: cover;
   width: 100%;
   height: 100%;
-  padding-top: 5px;
+  padding-top: 70px;
+}
+#page2title{
+  color: $color-dark-gray;
+  font-family: $font-family-Poppins;
 }
 
 #page3 {
-background-color: $color-purple;
+background-color: $color-yellow;
   background-size: cover;
   width: 100%;
   height: 100%;
-  padding-top: 5px;
+  padding-top: 70px;
+}
+
+#page3title{
+  color: $color-blue;
+  font-family: $font-family-Poppins;
+  text-align: center;
+  margin-bottom: 30px;
+}
+
+#contactContainer {
+  height: 600px;
+  width: 600px;
+  background-color:$color-light-gray;
+  text-align: center;
+  margin:auto;
+  border-radius: 20px;
+}
+
+#headshot {
+  width: 200px;
+  height:200px;
+  border-radius: 50%;
+  margin-top: 15px;
+}
+
+.page3text {
+  margin:5px;
+}
+#logoContainer {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: flex-end;
+}
+#logos {
+  margin-top: 5px;
+  height: 50px;
+  width: 50px;
 }
 
