--- a/src/style.css
+++ b/src/style.css
@@ -4,7 +4,8 @@
   padding: 0;
 }
 
-html, body {
+html,
+body {
   height: 100%;
   width: 100%;
   margin: 0;
@@ -78,7 +79,7 @@ html, body {
 }
 
 #page2 {
-  background-color: #D3D3D3;
+  background-color: #d3d3d3;
   background-size: cover;
   width: 100%;
   height: 100%;
@@ -88,6 +89,124 @@ html, body {
 #page2title {
   color: #627396;
   font-family: "Poppins", sans-serif;
+  text-align: center;
+}
+
+.allprojectscontainer {
+  background-color: #d3d3d3;
+}
+
+.row {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  width: 700px;
+  margin-left: 515px;
+}
+
+.column {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -ms-flex-preferred-size: 100%;
+      flex-basis: 100%;
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+}
+
+.projectcontainer {
+  background-color: #d3d3d3;
+  height: 280px;
+  width: 100px;
+  padding: 20px;
+  border-radius: 10px;
+}
+
+.imgcontainer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+}
+
+#projectimage {
+  width: 250px;
+  height: 150px;
+  border-radius: 20px;
+}
+
+.btncontainer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+}
+
+.btns {
+  border-radius: 10px;
+  padding: 5px;
+  margin: 5px;
+  font-size: 24px;
+  text-decoration: none;
+  text-align: center;
+  font-family: "Raleway", sans-serif;
+}
+
+#demo {
+  border: 2px solid #5a4a60;
+}
+
+#demo:link {
+  color: #5a4a60;
+}
+
+#demo:visited {
+  color: #5a4a60;
+}
+
+#demo:hover {
+  color: whitesmoke;
+  background-color: #5a4a60;
+}
+
+#code {
+  border: 2px solid #feb400;
+}
+
+#code:link {
+  color: #feb400;
+}
+
+#code:visited {
+  color: #feb400;
+}
+
+#code:hover {
+  color: whitesmoke;
+  background-color: #feb400;
 }
 
 #page3 {
@@ -106,9 +225,9 @@ html, body {
 }
 
 #contactContainer {
-  height: 600px;
-  width: 600px;
-  background-color: #D3D3D3;
+  height: 500px;
+  width: 400px;
+  background-color: #d3d3d3;
   text-align: center;
   margin: auto;
   border-radius: 20px;
@@ -141,5 +260,56 @@ html, body {
   margin-top: 5px;
   height: 50px;
   width: 50px;
+}
+
+#secondButtonContainer {
+  margin-top: 10px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+#resume {
+  border: 2px solid #000000;
+}
+
+#resume:link {
+  color: #000000;
+}
+
+#resume:visited {
+  color: #000000;
+}
+
+#resume:hover {
+  color: whitesmoke;
+  background-color: #000000;
+}
+
+#vlog {
+  border: 2px solid #000000;
+}
+
+#vlog:link {
+  color: #000000;
+}
+
+#vlog:visited {
+  color: #000000;
+}
+
+#vlog:hover {
+  color: whitesmoke;
+  background-color: #000000;
 }
 /*# sourceMappingURL=style.css.map */
