--- a/src/style.scss
+++ b/src/style.scss
@@ -1,27 +1,28 @@
-$color-white:whitesmoke;
+$color-white: whitesmoke;
 $color-purple: #5a4a60;
 $color-blue: #4a7aba;
-$color-light-gray:#D3D3D3;
-$color-dark-gray:#627396;
-$color-yellow:#feb400;
-$color-black:#000000;
+$color-light-gray: #d3d3d3;
+$color-dark-gray: #627396;
+$color-yellow: #feb400;
+$color-black: #000000;
 $font-family-roboto: 'Roboto', sans-serif;
 $font-family-Poppins: 'Poppins', sans-serif;
 $font-family-raleway: 'Raleway', sans-serif;
 
-*{
+* {
   font-family: 'Roboto', sans-serif;
   margin: 0;
   padding: 0;
 }
-html, body { 
+html,
+body {
   height: 100%;
   width: 100%;
   margin: 0;
 }
 
 #page1 {
-background: url("https://images.unsplash.com/photo-1523800503107-5bc3ba2a6f81?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=80"); 
+  background: url('https://images.unsplash.com/photo-1523800503107-5bc3ba2a6f81?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=80');
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -36,10 +37,10 @@ background: url("https://images.unsplash.com/photo-1523800503107-5bc3ba2a6f81?ix
   color: whitesmoke;
   text-align: center;
   position: absolute;
-    top: 50%;
-    left: 50%;  
-    transform: translate(-50%, -50%);
-    font-size: 36px;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-size: 36px;
   font-family: $font-family-raleway;
 }
 #sub-heading {
@@ -47,12 +48,12 @@ background: url("https://images.unsplash.com/photo-1523800503107-5bc3ba2a6f81?ix
   font-family: $font-family-Poppins;
   font-size: 26px;
   font-weight: 200;
-  font-style: italic;;
+  font-style: italic;
 }
 
 #nav-list {
-list-style-type: none;
-display: flex;
+  list-style-type: none;
+  display: flex;
   justify-content: flex-end;
   align-items: center;
   position: fixed;
@@ -64,40 +65,124 @@ display: flex;
 }
 
 .navPoint {
-padding: 15px;
-font-size: 24px;
-text-decoration: none; 
+  padding: 15px;
+  font-size: 24px;
+  text-decoration: none;
   &:link {
-  color: whitesmoke;
-}&:visited {
-  color: whitesmoke;
-}&:hover {
-  color: $color-black;
-  background-color: $color-yellow;
-}
+    color: whitesmoke;
+  }
+  &:visited {
+    color: whitesmoke;
+  }
+  &:hover {
+    color: $color-black;
+    background-color: $color-yellow;
+  }
 }
 
 #page2 {
-background-color:$color-light-gray;
+  background-color: $color-light-gray;
   background-size: cover;
   width: 100%;
   height: 100%;
   padding-top: 70px;
 }
-#page2title{
+#page2title {
   color: $color-dark-gray;
   font-family: $font-family-Poppins;
+  text-align: center;
+}
+
+.allprojectscontainer {
+  background-color:  $color-light-gray;
+}
+.row {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  width: 700px;
+  margin-left: 515px;
+}
+.column {
+  display: flex;
+  flex-direction: column;
+  flex-basis: 100%;
+  flex: 1;
+}
+.projectcontainer {
+  background-color: $color-light-gray;
+  height: 280px;
+  width: 100px;
+  padding: 20px;
+  border-radius: 10px;
+}
+
+.imgcontainer {
+  display: flex;
+  justify-content: center;
+  flex-direction: row;
+}
+
+
+#projectimage {
+  width: 250px;
+  height: 150px;
+  border-radius: 20px;
+}
+
+.btncontainer {
+  display: flex;
+  justify-content: center;
+  flex-direction: row;
+}
+
+.btns {
+  border-radius: 10px;
+  padding: 5px;
+  margin: 5px;
+  font-size: 24px;
+  text-decoration: none;
+  text-align: center;
+  font-family:$font-family-raleway;
+
+}
+
+#demo {
+  border: 2px solid $color-purple;
+  &:link {
+    color: $color-purple;
+  }
+  &:visited {
+    color: $color-purple;
+  }
+  &:hover {
+    color: $color-white;
+    background-color: $color-purple;
+  }
+}
+#code {
+  border: 2px solid $color-yellow;
+  &:link {
+    color: $color-yellow;
+  }
+  &:visited {
+    color: $color-yellow;
+  }
+  &:hover {
+    color: $color-white;
+    background-color: $color-yellow;
+  }
 }
 
 #page3 {
-background-color: $color-yellow;
+  background-color: $color-yellow;
   background-size: cover;
   width: 100%;
   height: 100%;
   padding-top: 70px;
 }
 
-#page3title{
+#page3title {
   color: $color-blue;
   font-family: $font-family-Poppins;
   text-align: center;
@@ -105,23 +190,24 @@ background-color: $color-yellow;
 }
 
 #contactContainer {
-  height: 600px;
-  width: 600px;
-  background-color:$color-light-gray;
+  height: 500px;
+  width: 400px;
+  background-color: $color-light-gray;
   text-align: center;
-  margin:auto;
+  margin: auto;
   border-radius: 20px;
+  
 }
 
 #headshot {
   width: 200px;
-  height:200px;
+  height: 200px;
   border-radius: 50%;
   margin-top: 15px;
 }
 
 .page3text {
-  margin:5px;
+  margin: 5px;
 }
 #logoContainer {
   display: flex;
@@ -134,3 +220,46 @@ background-color: $color-yellow;
   width: 50px;
 }
 
+#secondButtonContainer {
+  margin-top: 10px;
+display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+}
+
+#resume {
+  border: 2px solid $color-black;
+  &:link {
+    color: $color-black;
+  }
+  &:visited {
+    color: $color-black;
+  }
+  &:hover {
+    color: $color-white;
+    background-color: $color-black;
+  }
+}
+
+#vlog {
+  border: 2px solid $color-black;
+  &:link {
+    color: $color-black;
+  }
+  &:visited {
+    color: $color-black;
+  }
+  &:hover {
+    color: $color-white;
+    background-color: $color-black;
+  }
+}
+
+$color-white: whitesmoke;
+$color-purple: #5a4a60;
+$color-blue: #4a7aba;
+$color-light-gray: #d3d3d3;
+$color-dark-gray: #627396;
+$color-yellow: #feb400;
+$color-black: #000000;
