--- a/src/style.scss
+++ b/src/style.scss
@@ -48,7 +48,7 @@ body {
   font-size: 36px;
   font-family: $font-family-raleway;
   White-space: nowrap;
-  @media only screen and (max-width: $tablet){
+  @media (max-width: $tablet){
 font-size: 30px;
   }
 }
@@ -71,7 +71,7 @@ font-size: 30px;
   width: 100%;
   height: 60px;
   background: $color-black;
-  @media only screen and (max-width: $tablet){
+  @media (max-width: $tablet){
 justify-content: center;
   }
   
@@ -91,7 +91,7 @@ justify-content: center;
     color: $color-black;
     background-color: $color-yellow;
   }
-  @media only screen and (max-width: $tablet){
+  @media (max-width: $tablet){
 font-size: 15px;
 justify-content: center;
   }
@@ -160,7 +160,7 @@ transition: 1s ease;
   border-radius: 20px;
   box-shadow: 7px 7px 5px black;
   border: 2px ridge black;
-   @media only screen and (max-width: $tablet){
+   @media (max-width: $tablet){
 width: 200px;
 height: 115px;
   }
@@ -237,7 +237,7 @@ background-size: cover;
   margin: auto;
   border-radius: 20px;
   box-shadow: 7px 7px 5px black;
-  @media only screen and (max-width: $tablet){
+  @media (max-width: $tablet){
 width: 300px;
 height: 515px;
   }
