--- a/src/style.scss
+++ b/src/style.scss
@@ -48,7 +48,7 @@ body {
   font-size: 36px;
   font-family: $font-family-raleway;
   White-space: nowrap;
-  @media (max-width: $tablet){
+  @media screen and (max-width: $tablet){
 font-size: 30px;
   }
 }
@@ -71,7 +71,7 @@ font-size: 30px;
   width: 100%;
   height: 60px;
   background: $color-black;
-  @media (max-width: $tablet){
+  @media screen and (max-width: $tablet){
 justify-content: center;
   }
   
@@ -158,9 +158,9 @@ transition: 1s ease;
   width: 250px;
   height: 150px;
   border-radius: 20px;
-  box-shadow: 7px 7px 5px black;
+  box-shadow: 3px 3px 1px black;
   border: 2px ridge black;
-   @media (max-width: $tablet){
+  @media screen and (max-width: $tablet){
 width: 200px;
 height: 115px;
   }
@@ -237,7 +237,7 @@ background-size: cover;
   margin: auto;
   border-radius: 20px;
   box-shadow: 7px 7px 5px black;
-  @media (max-width: $tablet){
+  @media screen and (max-width: $tablet){
 width: 300px;
 height: 515px;
   }
