--- a/src/style.css
+++ b/src/style.css
@@ -33,7 +33,7 @@ body {
   White-space: nowrap;
 }
 
-@media (max-width: 600px) {
+@media screen and (max-width: 600px) {
   #welcome-section {
     font-size: 30px;
   }
@@ -66,7 +66,7 @@ body {
   background: #000000;
 }
 
-@media (max-width: 600px) {
+@media screen and (max-width: 600px) {
   #nav-list {
     -webkit-box-pack: center;
         -ms-flex-pack: center;
@@ -199,7 +199,7 @@ body {
   border: 2px ridge black;
 }
 
-@media (max-width: 600px) {
+@media screen and (max-width: 600px) {
   #projectimage {
     width: 200px;
     height: 115px;
@@ -264,14 +264,19 @@ body {
 }
 
 #page3 {
-  width: 100%;
-  height: 100%;
   padding-top: 70px;
   background: url("https://images.unsplash.com/photo-1603297638322-c7a08d52966c?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1051&q=80");
   background-size: cover;
   width: 100%;
   height: 100%;
   background-position: center center;
+}
+
+@media screen and (max-width: 600px) {
+  #page3 {
+    background-size: 800px;
+    background-position: left;
+  }
 }
 
 #page3title {
@@ -292,7 +297,7 @@ body {
           box-shadow: 7px 7px 5px black;
 }
 
-@media (max-width: 600px) {
+@media screen and (max-width: 600px) {
   #contactContainer {
     width: 300px;
     height: 515px;
