--- a/src/style.scss
+++ b/src/style.scss
@@ -62,6 +62,12 @@ font-size: 20px;
   font-size: 26px;
   font-weight: 200;
   font-style: italic;
+  @media screen and (max-width: $tablet){
+font-size: 20px;
+  }
+  @media screen and (max-width: $phone){
+font-size: 10px;
+  }
 }
 
 #nav-list {
@@ -175,7 +181,7 @@ width: 200px;
 height: 115px;
   }
   @media screen and (max-width: $phone){
-width: 100px;
+width: 150px;
 height: 70px;
   }
 }
@@ -236,7 +242,7 @@ background-size: 800px;
 background-position:left;
   }
   @media screen and (max-width: $phone){
-background-size: 400px;
+background-size: 800px;
 background-position:left;
   }
 }
@@ -262,8 +268,8 @@ width: 300px;
 height: 515px;
   }
   @media screen and (max-width: $phone){
-width: 200px;
-height: 415px;
+width: 300px;
+height: 600px;
   }
 }
 
