--- a/src/style.css
+++ b/src/style.css
@@ -149,10 +149,7 @@ body {
   color: #000000;
   font-family: "Poppins", sans-serif;
   text-align: center;
-}
-
-.allprojectscontainer {
-  background-color: #d3d3d3;
+  margin-bottom: 30px;
 }
 
 .row {
@@ -169,7 +166,8 @@ body {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  max-width: 700px;
+  max-width: 800px;
+  /*adjusts space between left and right of projects*/
 }
 
 .column {
@@ -194,10 +192,12 @@ body {
 }
 
 .projectcontainer {
-  height: 280px;
-  width: 100px;
-  padding: 20px;
+  height: auto;
+  width: auto;
+  padding: 10px;
   border-radius: 10px;
+  margin-bottom: 90px;
+  background-color: #000000;
 }
 
 .imgcontainer {
@@ -229,8 +229,7 @@ body {
   width: 250px;
   height: 150px;
   border-radius: 20px;
-  -webkit-box-shadow: 3px 3px 1px black;
-          box-shadow: 3px 3px 1px black;
+  /*box-shadow: 3px 3px 1px $color-light-gray;*/
   border: 2px ridge black;
 }
 
@@ -272,20 +271,20 @@ body {
 }
 
 #demo {
-  border: 2px solid #000000;
+  border: 2px solid whitesmoke;
 }
 
 #demo:link {
-  color: #000000;
+  color: whitesmoke;
 }
 
 #demo:visited {
-  color: #000000;
+  color: whitesmoke;
 }
 
 #demo:hover {
-  color: whitesmoke;
-  background-color: #000000;
+  color: #000000;
+  background-color: whitesmoke;
 }
 
 #code {
@@ -326,21 +325,6 @@ body {
     background-size: 800px;
     background-position: left;
   }
-}
-
-.darken-pseudo {
-  position: relative;
-}
-
-.darken-pseudo:after {
-  content: '';
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  display: block;
-  background-color: rgba(0, 0, 0, 0.5);
 }
 
 #page3title {
