--- a/src/style.scss
+++ b/src/style.scss
@@ -114,7 +114,7 @@ justify-content: center;
 }
 
 #page2 {
-  background-color: $color-light-gray;
+background-color: $color-light-gray;
   background-size: cover;
   width: 100%;
   height: 100%;
@@ -124,19 +124,16 @@ justify-content: center;
   color: $color-black;
   font-family: $font-family-Poppins;
   text-align: center;
+  margin-bottom: 30px;
 }
 
-.allprojectscontainer {
-  background-color:  $color-light-gray;
-
-}
 .row {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
   margin: auto;
   justify-content: center;
-  max-width: 700px;
+  max-width: 800px; /*adjusts space between left and right of projects*/
 }
 .column {
   align-items:center;
@@ -147,10 +144,12 @@ justify-content: center;
   flex: 1;
 }
 .projectcontainer {
-  height: 280px;
-  width: 100px;
-  padding: 20px;
+  height: auto;
+  width: auto;
+  padding: 10px;
   border-radius: 10px;
+  margin-bottom: 90px;
+  background-color:  $color-black;
 }
 
 .imgcontainer {
@@ -174,7 +173,7 @@ transition: 1s ease;
   width: 250px;
   height: 150px;
   border-radius: 20px;
-  box-shadow: 3px 3px 1px black;
+  /*box-shadow: 3px 3px 1px $color-light-gray;*/
   border: 2px ridge black;
   @media screen and (max-width: $tablet){
 width: 200px;
@@ -204,16 +203,16 @@ height: 100px;
 }
 
 #demo {
-  border: 2px solid $color-black;
+  border: 2px solid $color-white;
   &:link {
-    color: $color-black;
+    color: $color-white;
   }
   &:visited {
-    color: $color-black;
+    color: $color-white;
   }
   &:hover {
-    color: $color-white;
-    background-color: $color-black;
+    color: $color-black;
+    background-color: $color-white;
   }
 }
 #code {
