--- a/src/style.css
+++ b/src/style.css
@@ -143,6 +143,20 @@ body {
   width: 100%;
   height: 100%;
   padding-top: 70px;
+  background-position: center center;
+}
+
+@media screen and (max-width: 600px) {
+  #page2 {
+    height: 1200px;
+  }
+}
+
+@media screen and (max-width: 415px) {
+  #page2 {
+    background-size: 800px;
+    background-position: left;
+  }
 }
 
 #page2title {
@@ -437,5 +451,67 @@ body {
 #vlog:hover {
   color: whitesmoke;
   background-color: #000000;
+}
+
+#builtByContainer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-top: 60px;
+}
+
+@media screen and (max-width: 600px) {
+  #builtByContainer {
+    margin-top: 30px;
+  }
+}
+
+@media screen and (max-width: 415px) {
+  #builtByContainer {
+    margin-top: 30px;
+  }
+}
+
+#builtBy {
+  color: whitesmoke;
+  font-family: "Raleway", sans-serif;
+  font-size: 18px;
+}
+
+@media screen and (max-width: 600px) {
+  #builtBy {
+    font-size: 12px;
+  }
+}
+
+@media screen and (max-width: 415px) {
+  #builtBy {
+    font-size: 12px;
+  }
+}
+
+#jmartLogo {
+  height: 80px;
+  width: 80px;
+}
+
+@media screen and (max-width: 600px) {
+  #jmartLogo {
+    height: 60px;
+    width: 60px;
+  }
+}
+
+@media screen and (max-width: 415px) {
+  #jmartLogo {
+    height: 60px;
+    width: 60px;
+  }
 }
 /*# sourceMappingURL=style.css.map */
