--- a/src/style.scss
+++ b/src/style.scss
@@ -248,6 +248,7 @@ background-size: cover;
   @media screen and (max-width: $tablet){
 background-size: 800px;
 background-position:left;
+height: 750px;
   }
   @media screen and (max-width: $phone){
 background-size: 800px;
@@ -261,7 +262,6 @@ background-position:left;
   font-family: $font-family-Poppins;
   text-align: center;
   margin-bottom: 30px;
-  
 }
 
 #contactContainer {
