--- a/src/style.scss
+++ b/src/style.scss
@@ -15,6 +15,7 @@ $font-family-Poppins: 'Poppins', sans-serif;
 $font-family-raleway: 'Raleway', sans-serif;
 $phone: 415px;
 $tablet: 600px;
+$phoneLandscape: 844px;
 $desktopSmall: 1000px;
 $desktopLarge: 1300px;
 
@@ -27,8 +28,7 @@ html,
 body {
   height: 100%;
   width: 100%;
-  margin: 0;
-}
+  margin: 0;}
 
 #page1 {
   background: url('https://images.unsplash.com/photo-1523800503107-5bc3ba2a6f81?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=80');
@@ -40,6 +40,13 @@ body {
   width: 100%;
   height: 100%;
   padding-top: 5px;
+  @media screen and (min-width: $phoneLandscape) and (orientation:landscape) {
+    width: 100%;
+    background-size: cover;
+    display: flex;
+    justify-content: center;
+
+}
 }
 
 .welcome-section {
@@ -85,8 +92,11 @@ body {
             font-size: 24px;
             margin-left: 40px;
           }
+          @media screen and (min-width: $phoneLandscape) and (orientation:landscape) {
+            font-size: 30px;
+            margin-left: 40px;
         }}
-  }
+  }}
 
 
 .sub-heading {
@@ -229,6 +239,11 @@ body {
   @media screen and (max-width: $phone) {
     justify-content: center;
   }
+  @media screen and (min-width: $phoneLandscape) and (orientation:landscape) {
+    display: flex;
+    justify-content: center;
+}
+  
 }
 #navbar-brand{
   font-family: $font-family-raleway;
@@ -256,11 +271,16 @@ body {
       justify-content: center;
       align-items: center;
     }
+    @media screen and (min-width: $phoneLandscape) and (orientation:landscape) {
+      margin-left: -50px;
+    margin-top: -5px;}
   }
 #nav-dropdown{
   list-style-type: none;
   display: flex;
   align-items: center;
+  
+  
 }
 
 .navPoint {
@@ -291,6 +311,7 @@ body {
     display: flex;
     justify-content: center;
   }
+
 }
 .shortAbout {
 display: none;
@@ -337,6 +358,8 @@ display: none;
   @media screen and (max-width: $phone) {
     height: 1500px;
   }
+  @media screen and (min-width: $phoneLandscape) and (orientation:landscape) {
+    height: 850px;}
 }
 
 #page2title {
@@ -372,6 +395,10 @@ margin-top: 100px;
   flex-direction: column;
 align-items: center;
 margin-top: 30px;}
+@media screen and (min-width: $phoneLandscape) and (orientation:landscape) {
+  display: flex;
+  flex-wrap: wrap;
+margin-top: 50px;}
 }
 
 .projectcontainer {
@@ -389,6 +416,10 @@ margin-top: 30px;}
   @media screen and (max-width: $phone) {
     height: 250px;
   width: 180px;}
+  @media screen and (min-width: $phoneLandscape) and (orientation:landscape) {
+    height: 260px;
+  width: 250px;
+margin-left: 12px;}
     
     .projTitles{
       text-align: center;
@@ -400,6 +431,8 @@ margin-top: 30px;}
       }
       @media screen and (max-width: $phone) {
         font-size: 10px;}
+        @media screen and (min-width: $phoneLandscape) and (orientation:landscape) {
+          font-size: 10px;}
     }
   .projectlines{
     margin-top: 5px;
@@ -419,6 +452,7 @@ margin-top: 30px;}
   flex-direction: row;
   border-radius: $border-radius-container;
   margin-top: 10px;
+  
   
 }
 
@@ -447,6 +481,9 @@ margin-top: 30px;}
     height: 100px;
     margin-top: -3px;
   }
+  @media screen and (min-width: $phoneLandscape) and (orientation:landscape) {
+    width: 160px;
+  height: 100px;}
 }
 .projSkills{
 text-align: center;
@@ -459,6 +496,8 @@ margin-top: 5px;
 @media screen and (max-width: $phone) {
   font-size: 7px;
 }
+@media screen and (min-width: $phoneLandscape) and (orientation:landscape) {
+  font-size: 8px;}
 }
 .projAbout{
   text-align: left;
@@ -474,6 +513,8 @@ margin-top: 5px;
     font-size: 10px;
     margin-top: 5px;
   }
+  @media screen and (min-width: $phoneLandscape) and (orientation:landscape) {
+    font-size: 12px;}
 }
 #marsAbout{
   font-size: 11px;
@@ -486,6 +527,8 @@ margin-top: 5px;
     font-size: 7.5px;
     margin: 2px;
   }
+  @media screen and (min-width: $phoneLandscape) and (orientation:landscape) {
+    font-size: 8px;}
 }
 .verticalLine{
   border-right: 1px solid $color-light-black;
@@ -567,6 +610,8 @@ margin-top: 5px;
     background-size: 800px;
     background-position: left;
   }
+  @media screen and (min-width: $phoneLandscape) and (orientation:landscape) {
+    height: 700px;}
 }
 #page3title{
 text-align: center;
@@ -713,6 +758,8 @@ color: $color-light-black;
   height: 100vh;
   background-color: $color-mid-gray;
   padding-top: 70px;
+  @media screen and (min-width: $phoneLandscape) and (orientation:landscape) {
+    height: 700px;}
 }
 #page4title {
   color: $color-light-black;;
@@ -758,6 +805,9 @@ color: $color-light-black;
     width: 350px;
     margin:0;
   }
+  @media screen and (min-width: $phoneLandscape) and (orientation:landscape) {
+    font-size: 13px;
+  width: 350px;}
   
 }
 .aboutLinks{
@@ -806,6 +856,9 @@ box-shadow: 0px 0px 10px $color-light-black;
   @media screen and (max-width: $phone) {
     background-position: left;
   }
+  @media screen and (min-width: $phoneLandscape) and (orientation:landscape) {
+    height: 700px;
+    background-position: left;}
 }
 
 #page5title {
