--- a/src/style.scss
+++ b/src/style.scss
@@ -40,13 +40,14 @@ body {
   width: 100%;
   height: 100%;
   padding-top: 5px;
-//   @media screen and (min-width: $phoneLandscape) and (orientation:landscape) {
-//     width: 100%;
-//     background-size: cover;
-//     display: flex;
-//     justify-content: center;
+  @media only screen and (orientation: landscape) and (max-width: $phoneLandscape) and (max-width: $phoneLandscape) {
+    width: 100%;
+    background-size: cover;
+    display: flex;
+    justify-content: center;
 
-// }
+}
+
 }
 
 .welcome-section {
@@ -92,11 +93,11 @@ body {
             font-size: 24px;
             margin-left: 40px;
           }
-        //   @media screen and (min-width: $phoneLandscape) and (orientation:landscape) {
-        //     font-size: 30px;
-        //     margin-left: 40px;
-        // }}
-}}}
+          @media only screen and (orientation: landscape) and (max-width: $phoneLandscape) and (max-width: $phoneLandscape) {
+            font-size: 30px;
+            margin-left: 40px;
+        }}
+}}
 
 
 .sub-heading {
@@ -239,10 +240,10 @@ body {
   @media screen and (max-width: $phone) {
     justify-content: center;
   }
-//   @media screen and (min-width: $phoneLandscape) and (orientation:landscape) {
-//     display: flex;
-//     justify-content: center;
-// }
+  @media only screen and (orientation: landscape) and (max-width: $phoneLandscape) and (max-width: $phoneLandscape) {
+    display: flex;
+    justify-content: center;
+}
   
 }
 #navbar-brand{
@@ -271,11 +272,11 @@ body {
       justify-content: center;
       align-items: center;
     }
-  //   @media screen and (min-width: $phoneLandscape) and (orientation:landscape) {
-  //     margin-left: -50px;
-  //   margin-top: -5px;}
-  // }
-}
+    @media only screen and (orientation: landscape) and (max-width: $phoneLandscape) and (max-width: $phoneLandscape) {
+      margin-left: -50px;
+    margin-top: -5px;}
+  }
+
 #nav-dropdown{
   list-style-type: none;
   display: flex;
@@ -359,8 +360,8 @@ display: none;
   @media screen and (max-width: $phone) {
     height: 1500px;
   }
-  // @media screen and (min-width: $phoneLandscape) and (orientation:landscape) {
-  //   height: 850px;}
+  @media only screen and (orientation: landscape) and (max-width: $phoneLandscape) {
+    height: 850px;}
 }
 
 #page2title {
@@ -396,10 +397,10 @@ margin-top: 100px;
   flex-direction: column;
 align-items: center;
 margin-top: 30px;}
-// @media screen and (min-width: $phoneLandscape) and (orientation:landscape) {
-//   display: flex;
-//   flex-wrap: wrap;
-// margin-top: 50px;}
+@media only screen and (orientation: landscape) and (max-width: $phoneLandscape) {
+  display: flex;
+  flex-wrap: wrap;
+margin-top: 50px;}
 }
 
 .projectcontainer {
@@ -417,10 +418,10 @@ margin-top: 30px;}
   @media screen and (max-width: $phone) {
     height: 250px;
   width: 180px;}
-//   @media screen and (min-width: $phoneLandscape) and (orientation:landscape) {
-//     height: 260px;
-//   width: 250px;
-// margin-left: 12px;}
+  @media only screen and (orientation: landscape) and (max-width: $phoneLandscape) {
+    height: 260px;
+  width: 250px;
+margin-left: 12px;}
     
     .projTitles{
       text-align: center;
@@ -432,8 +433,8 @@ margin-top: 30px;}
       }
       @media screen and (max-width: $phone) {
         font-size: 10px;}
-        // @media screen and (min-width: $phoneLandscape) and (orientation:landscape) {
-        //   font-size: 10px;}
+        @media only screen and (orientation: landscape) and (max-width: $phoneLandscape) {
+          font-size: 10px;}
     }
   .projectlines{
     margin-top: 5px;
@@ -482,9 +483,9 @@ margin-top: 30px;}
     height: 100px;
     margin-top: -3px;
   }
-  // @media screen and (min-width: $phoneLandscape) and (orientation:landscape) {
-  //   width: 160px;
-  // height: 100px;}
+  @media only screen and (orientation: landscape) and (max-width: $phoneLandscape) {
+    width: 160px;
+  height: 100px;}
 }
 .projSkills{
 text-align: center;
@@ -497,8 +498,8 @@ margin-top: 5px;
 @media screen and (max-width: $phone) {
   font-size: 7px;
 }
-// @media screen and (min-width: $phoneLandscape) and (orientation:landscape) {
-//   font-size: 8px;}
+@media only screen and (orientation: landscape) and (max-width: $phoneLandscape) {
+  font-size: 8px;}
 }
 .projAbout{
   text-align: left;
@@ -514,8 +515,8 @@ margin-top: 5px;
     font-size: 10px;
     margin-top: 5px;
   }
-  // @media screen and (min-width: $phoneLandscape) and (orientation:landscape) {
-  //   font-size: 12px;}
+  @media only screen and (orientation: landscape) and (max-width: $phoneLandscape) {
+    font-size: 12px;}
 }
 #marsAbout{
   font-size: 11px;
@@ -528,8 +529,8 @@ margin-top: 5px;
     font-size: 7.5px;
     margin: 2px;
   }
-  // @media screen and (min-width: $phoneLandscape) and (orientation:landscape) {
-  //   font-size: 8px;}
+  @media only screen and (orientation: landscape) and (max-width: $phoneLandscape) {
+    font-size: 8px;}
 }
 .verticalLine{
   border-right: 1px solid $color-light-black;
@@ -611,8 +612,8 @@ margin-top: 5px;
     background-size: 800px;
     background-position: left;
   }
-  // @media screen and (min-width: $phoneLandscape) and (orientation:landscape) {
-  //   height: 700px;}
+  @media only screen and (orientation: landscape) and (max-width: $phoneLandscape) {
+    height: 700px;}
 }
 #page3title{
 text-align: center;
@@ -759,8 +760,8 @@ color: $color-light-black;
   height: 100vh;
   background-color: $color-mid-gray;
   padding-top: 70px;
-  // @media screen and (min-width: $phoneLandscape) and (orientation:landscape) {
-  //   height: 700px;}
+  @media only screen and (orientation: landscape) and (max-width: $phoneLandscape) {
+    height: 700px;}
 }
 #page4title {
   color: $color-light-black;;
@@ -806,9 +807,9 @@ color: $color-light-black;
     width: 350px;
     margin:0;
   }
-  // @media screen and (min-width: $phoneLandscape) and (orientation:landscape) {
-  //   font-size: 13px;
-  // width: 350px;}
+  @media only screen and (orientation: landscape) and (max-width: $phoneLandscape) {
+    font-size: 13px;
+  width: 350px;}
   
 }
 .aboutLinks{
@@ -857,9 +858,9 @@ box-shadow: 0px 0px 10px $color-light-black;
   @media screen and (max-width: $phone) {
     background-position: left;
   }
-  // @media screen and (min-width: $phoneLandscape) and (orientation:landscape) {
-  //   height: 700px;
-  //   background-position: left;}
+  @media only screen and (orientation: landscape) and (max-width: $phoneLandscape) {
+    height: 700px;
+    background-position: left;}
 }
 
 #page5title {
