--- a/src/style.css
+++ b/src/style.css
@@ -20,6 +20,19 @@ body {
   padding-top: 5px;
 }
 
+@media only screen and (orientation: landscape) and (max-width: 844px) and (max-width: 844px) {
+  #page1 {
+    width: 100%;
+    background-size: cover;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+}
+
 .welcome-section {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -99,6 +112,13 @@ body {
 @media screen and (max-width: 415px) {
   .box .title h1 {
     font-size: 24px;
+    margin-left: 40px;
+  }
+}
+
+@media only screen and (orientation: landscape) and (max-width: 844px) and (max-width: 844px) {
+  .box .title h1 {
+    font-size: 30px;
     margin-left: 40px;
   }
 }
@@ -358,6 +378,17 @@ body {
   }
 }
 
+@media only screen and (orientation: landscape) and (max-width: 844px) and (max-width: 844px) {
+  #nav-list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+}
+
 #navbar-brand {
   font-family: "Raleway", sans-serif;
   -webkit-transition: color 1s;
@@ -409,6 +440,13 @@ body {
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
+  }
+}
+
+@media only screen and (orientation: landscape) and (max-width: 844px) and (max-width: 844px) {
+  #navbar-brand {
+    margin-left: -50px;
+    margin-top: -5px;
   }
 }
 
@@ -540,6 +578,12 @@ body {
   }
 }
 
+@media only screen and (orientation: landscape) and (max-width: 844px) {
+  #page2 {
+    height: 850px;
+  }
+}
+
 #page2title {
   color: #242526;
   font-family: "Poppins", sans-serif;
@@ -597,6 +641,17 @@ body {
   }
 }
 
+@media only screen and (orientation: landscape) and (max-width: 844px) {
+  .allprojectscontainer {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    margin-top: 50px;
+  }
+}
+
 .projectcontainer {
   height: 330px;
   width: 280px;
@@ -622,6 +677,14 @@ body {
   }
 }
 
+@media only screen and (orientation: landscape) and (max-width: 844px) {
+  .projectcontainer {
+    height: 260px;
+    width: 250px;
+    margin-left: 12px;
+  }
+}
+
 .projectcontainer .projTitles {
   text-align: center;
   font-family: "Poppins", sans-serif;
@@ -636,6 +699,12 @@ body {
 }
 
 @media screen and (max-width: 415px) {
+  .projectcontainer .projTitles {
+    font-size: 10px;
+  }
+}
+
+@media only screen and (orientation: landscape) and (max-width: 844px) {
   .projectcontainer .projTitles {
     font-size: 10px;
   }
@@ -701,6 +770,13 @@ body {
   }
 }
 
+@media only screen and (orientation: landscape) and (max-width: 844px) {
+  #projectimage {
+    width: 160px;
+    height: 100px;
+  }
+}
+
 .projSkills {
   text-align: center;
   font-family: "Poppins", sans-serif;
@@ -717,6 +793,12 @@ body {
 @media screen and (max-width: 415px) {
   .projSkills {
     font-size: 7px;
+  }
+}
+
+@media only screen and (orientation: landscape) and (max-width: 844px) {
+  .projSkills {
+    font-size: 8px;
   }
 }
 
@@ -742,6 +824,12 @@ body {
   }
 }
 
+@media only screen and (orientation: landscape) and (max-width: 844px) {
+  .projAbout {
+    font-size: 12px;
+  }
+}
+
 #marsAbout {
   font-size: 11px;
   margin: 6px;
@@ -758,6 +846,12 @@ body {
   #marsAbout {
     font-size: 7.5px;
     margin: 2px;
+  }
+}
+
+@media only screen and (orientation: landscape) and (max-width: 844px) {
+  #marsAbout {
+    font-size: 8px;
   }
 }
 
@@ -872,6 +966,12 @@ body {
   #page3 {
     background-size: 800px;
     background-position: left;
+  }
+}
+
+@media only screen and (orientation: landscape) and (max-width: 844px) {
+  #page3 {
+    height: 700px;
   }
 }
 
@@ -1105,6 +1205,12 @@ body {
   padding-top: 70px;
 }
 
+@media only screen and (orientation: landscape) and (max-width: 844px) {
+  #page4 {
+    height: 700px;
+  }
+}
+
 #page4title {
   color: #242526;
   font-family: "Poppins", sans-serif;
@@ -1174,6 +1280,13 @@ body {
   }
 }
 
+@media only screen and (orientation: landscape) and (max-width: 844px) {
+  #aboutText {
+    font-size: 13px;
+    width: 350px;
+  }
+}
+
 .aboutLinks {
   font-family: "Poppins", sans-serif;
   text-decoration: none;
@@ -1233,6 +1346,13 @@ body {
 
 @media screen and (max-width: 415px) {
   #page5 {
+    background-position: left;
+  }
+}
+
+@media only screen and (orientation: landscape) and (max-width: 844px) {
+  #page5 {
+    height: 700px;
     background-position: left;
   }
 }
