--- a/src/style.css
+++ b/src/style.css
@@ -625,6 +625,7 @@ body {
       -ms-flex-pack: space-evenly;
           justify-content: space-evenly;
   margin-top: 100px;
+  margin-bottom: 50px;
 }
 
 @media screen and (max-width: 600px) {
@@ -669,7 +670,6 @@ body {
   width: 280px;
   padding: 10px;
   border-radius: 5px;
-  margin-bottom: 90px;
   background-color: whitesmoke;
   -webkit-box-shadow: 0px 0px 20px #919191;
           box-shadow: 0px 0px 20px #919191;
@@ -960,6 +960,11 @@ body {
   color: #242526;
   background-color: whitesmoke;
   border: 2px solid whitesmoke;
+}
+
+.socialMediaAppPics {
+  height: 200px;
+  width: 300px;
 }
 
 #page3 {
@@ -1335,9 +1340,14 @@ body {
 
 @media screen and (max-width: 415px) {
   #aboutPic {
-    width: 100px;
-    height: 100px;
     display: none;
+  }
+}
+
+@media only screen and (orientation: landscape) and (max-width: 844px) {
+  #aboutPic {
+    width: 250px;
+    height: 350px;
   }
 }
 
