--- a/src/style.css
+++ b/src/style.css
@@ -679,6 +679,7 @@ body {
   .projectcontainer {
     height: 250px;
     width: 180px;
+    margin-top: 30px;
   }
 }
 
@@ -686,6 +687,7 @@ body {
   .projectcontainer {
     height: 250px;
     width: 180px;
+    margin-top: 30px;
   }
 }
 
